[gd_scene load_steps=2 format=3 uid="uid://duvrwlngmodgp"]

[ext_resource type="Script" path="res://scripts/audioPlayer/audioPlayer.gd" id="1_ayfqj"]

[node name="AudioPlayer" type="Node"]
script = ExtResource("1_ayfqj")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"Music"

[node name="SpeechPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -12.0
bus = &"SFX"

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = &"SFX"

[connection signal="finished" from="SpeechPlayer" to="." method="_on_speech_player_finished"]
